--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -240,8 +240,7 @@ jobs:
         if: ${{ inputs.runasadmin == 'true' }}
         shell: bash
         run: |
-          sed -i -e '/<!-- administrator/d' ./flutter/windows/runner/runner.exe.manifest
-          sed -i -e '/administrator -->/d' ./flutter/windows/runner/runner.exe.manifest
+          echo "SET_TARGET_PROPERTIES(\${BINARY_NAME} PROPERTIES LINK_FLAGS    \"/MANIFESTUAC:\\\"level='requireAdministrator' uiAccess='false'\\\" /SUBSYSTEM:WINDOWS\")" >> ./flutter/windows/runner/CMakeLists.txt
 
       - name: Deploy Stage
         uses: fjogeleit/http-request-action@v1
