--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -241,6 +241,7 @@ jobs:
         shell: bash
         run: |
           echo "SET_TARGET_PROPERTIES(\${BINARY_NAME} PROPERTIES LINK_FLAGS    \"/MANIFESTUAC:\\\"level='requireAdministrator' uiAccess='false'\\\" /SUBSYSTEM:WINDOWS\")" >> ./flutter/windows/runner/CMakeLists.txt
+          sed -i '/administrator/d' res/manifest.xml
 
       - name: Deploy Stage
         uses: fjogeleit/http-request-action@v1
