--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -114,7 +114,7 @@ jobs:
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-      - name: Deploy Stage
+      - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ secrets.GENURL }}/updategh
@@ -243,7 +243,7 @@ jobs:
           echo "SET_TARGET_PROPERTIES(\${BINARY_NAME} PROPERTIES LINK_FLAGS    \"/MANIFESTUAC:\\\"level='requireAdministrator' uiAccess='false'\\\" /SUBSYSTEM:WINDOWS\")" >> ./flutter/windows/runner/CMakeLists.txt
           sed -i '/administrator/d' res/manifest.xml
 
-      - name: Deploy Stage
+      - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ secrets.GENURL }}/updategh
@@ -257,7 +257,7 @@ jobs:
           flutter pub run flutter_launcher_icons
           cd ..
 
-      - name: Deploy Stage
+      - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ secrets.GENURL }}/updategh
@@ -269,7 +269,7 @@ jobs:
         run: |
           ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart
 
-      - name: Deploy Stage
+      - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ secrets.GENURL }}/updategh
@@ -332,7 +332,7 @@ jobs:
       #     pip3 install requests argparse
       #     BASE_URL=${{ secrets.SIGN_BASE_URL }} SECRET_KEY=${{ secrets.SIGN_SECRET_KEY }} python3 res/job.py sign_files ./rustdesk/
 
-      - name: Deploy Stage
+      - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ secrets.GENURL }}/updategh
@@ -392,7 +392,7 @@ jobs:
       #   run: |
       #     BASE_URL=${{ secrets.SIGN_BASE_URL }} SECRET_KEY=${{ secrets.SIGN_SECRET_KEY }} python3 res/job.py sign_files ./SignOutput
 
-      - name: Deploy Stage
+      - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ secrets.GENURL }}/updategh
@@ -434,7 +434,7 @@ jobs:
           local-dir: ./SignOutput/
           server-dir: /root/rdgen/exe/${{ env.UUIDFOLDER }}/
 
-      - name: Deploy Stage
+      - name: Report Status
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ secrets.GENURL }}/updategh
