--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -292,11 +292,18 @@ jobs:
           python .\build.py --portable --flutter --skip-portable-pack
           mv ./flutter/build/windows/x64/runner/Release ./rustdesk
 
+      - name: logo stuff
+        continue-on-error: true
+        shell: bash
+        run: |
+          echo "${{ inputs.logobase64 }}" | base64 -d > ./rustdesk/data/flutter_assets/assets/logo.png
+  
       - name: icon stuff
         continue-on-error: true
         run: |
           mv ./rustdesk/data/flutter_assets/assets/icon.svg ./rustdesk/data/flutter_assets/assets/icon.svg.bak
           magick ./res/icon.png ./rustdesk/data/flutter_assets/assets/icon.svg
+          magick ./rustdesk/data/flutter_assets/assets/logo.png ./rustdesk/data/flutter_assets/assets/logo.svg
 
       - name: logo stuff
         continue-on-error: true
