--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -438,11 +438,11 @@ jobs:
       - name: Upload to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
+          server: ${{ secrets.GEN_FTP_SERVER }}
+          username: ${{ secrets.GEN_FTP_USER }}
+          password: ${{ secrets.GEN_FTP_PASSWORD }}
           local-dir: ./signed-apk/
-          server-dir: android/${{ matrix.job.arch }}/
+          server-dir: /root/rdgen/exe/${{ env.UUIDFOLDER }}/
           exclude: | 
             *.idsig
             *.jks
