--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -94,7 +94,7 @@ jobs:
   build-rustdesk-android:
     needs: [generate-bridge-linux]
     name: build rustdesk android apk ${{ matrix.job.target }}
-    runs-on: self-hosted
+    runs-on: self-hosted, Linux
     strategy:
       fail-fast: false
       matrix:
