--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -102,7 +102,7 @@ jobs:
   build-for-windows-flutter:
     name: Build Windows
     #needs: [build-RustDeskTempTopMostWindow]
-    runs-on: self-hosted
+    runs-on: self-hosted, Windows
     strategy:
       fail-fast: false
       matrix:
