--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -139,61 +139,62 @@ jobs:
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-      - name: Install dependencies
-        run: |
-          echo ${{ secrets.SUDOPW }} | sudo -S apt-get update
-          echo ${{ secrets.SUDOPW }} | sudo -S apt-get install -y \
-               clang \
-               cmake \
-               curl \
-               gcc-multilib \
-               git \
-               g++ \
-               g++-multilib \
-               imagemagick \
-               libappindicator3-dev \
-               libasound2-dev \
-               libc6-dev \
-               libclang-10-dev \
-               libgstreamer1.0-dev \
-               libgstreamer-plugins-base1.0-dev \
-               libgtk-3-dev \
-               libpam0g-dev \
-               libpulse-dev \
-               libva-dev \
-               libvdpau-dev \
-               libxcb-randr0-dev \
-               libxcb-shape0-dev \
-               libxcb-xfixes0-dev \
-               libxdo-dev \
-               libxfixes-dev \
-               llvm-10-dev \
-               nasm \
-               ninja-build \
-               openjdk-11-jdk-headless \
-               pkg-config \
-               tree \
-               wget
+      # - name: Install dependencies
+      #   run: |
+      #     echo ${{ secrets.SUDOPW }} | sudo -S apt-get update
+      #     echo ${{ secrets.SUDOPW }} | sudo -S apt-get install -y \
+      #          clang \
+      #          cmake \
+      #          curl \
+      #          gcc-multilib \
+      #          git \
+      #          g++ \
+      #          g++-multilib \
+      #          imagemagick \
+      #          libappindicator3-dev \
+      #          libasound2-dev \
+      #          libc6-dev \
+      #          libclang-10-dev \
+      #          libgstreamer1.0-dev \
+      #          libgstreamer-plugins-base1.0-dev \
+      #          libgtk-3-dev \
+      #          libpam0g-dev \
+      #          libpulse-dev \
+      #          libva-dev \
+      #          libvdpau-dev \
+      #          libxcb-randr0-dev \
+      #          libxcb-shape0-dev \
+      #          libxcb-xfixes0-dev \
+      #          libxdo-dev \
+      #          libxfixes-dev \
+      #          llvm-10-dev \
+      #          nasm \
+      #          ninja-build \
+      #          openjdk-11-jdk-headless \
+      #          pkg-config \
+      #          tree \
+      #          wget
 
       - name: Checkout source code
         uses: actions/checkout@v4
-      - name: Install flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-          flutter-version: ${{ env.ANDROID_FLUTTER_VERSION }}
-      - uses: nttld/setup-ndk@v1
-        id: setup-ndk
-        with:
-          ndk-version: ${{ env.NDK_VERSION }}
-          add-to-path: true
 
-      - name: Setup vcpkg with Github Actions binary cache
-        uses: lukka/run-vcpkg@v11
-        with:
-          vcpkgDirectory: /opt/artifacts/vcpkg
-          vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
-          doNotCache: false
+      # - name: Install flutter
+      #   uses: subosito/flutter-action@v2
+      #   with:
+      #     channel: "stable"
+      #     flutter-version: ${{ env.ANDROID_FLUTTER_VERSION }}
+      # - uses: nttld/setup-ndk@v1
+      #   id: setup-ndk
+      #   with:
+      #     ndk-version: ${{ env.NDK_VERSION }}
+      #     add-to-path: true
+
+      # - name: Setup vcpkg with Github Actions binary cache
+      #   uses: lukka/run-vcpkg@v11
+      #   with:
+      #     vcpkgDirectory: /opt/artifacts/vcpkg
+      #     vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+      #     doNotCache: false
 
       - name: Install vcpkg dependencies
         run: |
