--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,7 +102,7 @@ jobs:
   build-for-windows-flutter:
     name: Build Windows
     #needs: [build-RustDeskTempTopMostWindow]
-    runs-on: self-hosted, windows
+    runs-on: [self-hosted, windows]
     strategy:
       fail-fast: false
       matrix:
