--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -312,6 +312,8 @@ jobs:
           #cp ./flutter/android/app/src/main/res/values/strings.xml ./flutter/android/app/src/main/res/values/strings.xml.bak
           sed -i -e 's|<string name="app_name">RustDesk</string>|<string name="app_name">${{ inputs.appname }}</string>|' ./flutter/android/app/src/main/res/values/strings.xml
           sed -i -e 's|<string name="accessibility_service_description">Allow other devices to control your phone using virtual touch, when RustDesk screen sharing is established</string>|<string name="accessibility_service_description">Allow other devices to control your phone using virtual touch, when ${{ inputs.appname }} screen sharing is established</string>|' ./flutter/android/app/src/main/res/values/strings.xml
+          sed -i -e "s|title: 'RustDesk',|title: '${{ inputs.appname }}'|" ./flutter/lib/main.dart
+
 
       - name: replace flutter icons
         run: |
@@ -369,7 +371,7 @@ jobs:
           mkdir -p ./flutter/android/app/src/main/jniLibs/arm64-v8a
           cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/aarch64-linux-android/libc++_shared.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/
           cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/librustdesk.so
-          echo -n "${{ env.CUSTOM }}" | cat > ./flutter/android/app/src/main/jniLibs/arm64-v8a/custom.txt
+          echo -n "${{ env.CUSTOM }}" | cat > ./flutter/assets/custom.txt
           convert ./res/icon.png ./flutter/assets/icon.svg
           # build flutter
           pushd flutter
