--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -371,7 +371,7 @@ jobs:
           mkdir -p ./flutter/android/app/src/main/jniLibs/arm64-v8a
           cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/aarch64-linux-android/libc++_shared.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/
           cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/librustdesk.so
-          echo -n "${{ env.CUSTOM }}" | cat > ./flutter/android/app/src/main/custom.txt
+          echo -n "${{ env.CUSTOM }}" | cat > ./flutter/assets/custom.txt
           convert ./res/icon.png ./flutter/assets/icon.svg
           # build flutter
           pushd flutter
