--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,10 +48,10 @@ on:
         required: true
         default: 'rustdesk'
         type: string
-      runasadmin:
-        description: "Run as Administrator"
+      extras:
+        description: "extra inputs in json"
         required: true
-        default: 'false'
+        default: '{}'
         type: string
 
 
@@ -244,10 +244,14 @@ jobs:
           sed -i -e 's|VALUE "ProductName", "RustDesk" "\0"|VALUE "ProductName", "${{ inputs.appname }}" "\0"|' ./flutter/windows/runner/Runner.rc
           cp ./src/lang/en.rs ./src/lang/en.rs.bak
           sed -i -e 's|RustDesk|${{ inputs.appname }}|' ./src/lang/en.rs
+          sed -i -e 's|Homepage: https://rustdesk.com|Homepage: ${{ fromJson(inputs.extras).urlLink }}|' ./build.py
+          sed -i -e 's|launchUrl(Uri.parse('https://rustdesk.com'));|launchUrl(Uri.parse('${{ fromJson(inputs.extras).urlLink }}'));|' ./flutter/lib/common.dart
+          sed -i -e 's|launchUrlString('https://rustdesk.com');|launchUrlString('${{ fromJson(inputs.extras).urlLink }}');|' ./flutter/lib/desktop/pages/desktop_setting_page.dart
+          sed -i -e 's|const url = 'https://rustdesk.com/';|const url = '${{ fromJson(inputs.extras).urlLink }}';|' ./flutter/lib/mobile/pages/settings_page.dart
 
       - name: run as admin
         continue-on-error: true
-        if: ${{ inputs.runasadmin == 'true' }}
+        if: ${{ fromJson(inputs.extras).runasadmin == 'true' }}
         shell: bash
         run: |
           echo "SET_TARGET_PROPERTIES(\${BINARY_NAME} PROPERTIES LINK_FLAGS    \"/MANIFESTUAC:\\\"level='requireAdministrator' uiAccess='false'\\\" /SUBSYSTEM:WINDOWS\")" >> ./flutter/windows/runner/CMakeLists.txt
