--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -133,6 +133,9 @@ jobs:
 
       - name: Checkout source code
         uses: actions/checkout@v4
+        with:
+          name: rustdesk/rustdesk
+          ref: tags/1.3.1
 
       # - name: Install LLVM and Clang
       #   uses: KyleMayes/install-llvm-action@v1
